refine type, add grfx, refine closebar

--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -7,8 +7,8 @@
 @include foundation-global-styles;
 @include foundation-grid;
 @include foundation-typography;
-/*
 @include foundation-button;
+/*
 @include foundation-forms;
 */
 @include foundation-visibility-classes;
@@ -20,17 +20,19 @@
 @include foundation-breadcrumbs;
 @include foundation-button-group;
 @include foundation-callout;
+*/
 @include foundation-close-button;
+/*
 @include foundation-drilldown-menu;
 @include foundation-dropdown;
 @include foundation-dropdown-menu;
 */
 @include foundation-flex-video;
-/*
-@include foundation-label;
+// @include foundation-label;
 @include foundation-media-object;
-@include foundation-menu;
+// @include foundation-menu;
 @include foundation-off-canvas;
+/*
 @include foundation-orbit;
 @include foundation-pagination;
 @include foundation-progress-bar;
@@ -38,9 +40,9 @@
 @include foundation-sticky;
 */
 @include foundation-reveal;
-// @include foundation-switch;
-@include foundation-table;
 /*
+@include foundation-switch;
+@include foundation-table;
 @include foundation-tabs;
 @include foundation-thumbnail;
 @include foundation-title-bar;
