--- a/_scss/custom/_modal.scss
+++ b/_scss/custom/_modal.scss
@@ -19,6 +19,7 @@
 
 .reveal .close-button {
     color: #fff;
+    font-size: 2.25rem;
     background-color: #000;
     width: 2rem;
     height: 2rem;
