--- a/_scss/custom/_pages.scss
+++ b/_scss/custom/_pages.scss
@@ -25,7 +25,7 @@
 
 
 /* vertical border treatment
-........................................................................ */
+------------------------------------------------------------------------ */
 
 // using box shadow so we can overlap 1px borders
 // doing even left and odd right in case one is deeper than the other
