--- a/_scss/custom/_close-bar.scss
+++ b/_scss/custom/_close-bar.scss
@@ -1,10 +1,12 @@
 /* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
   
-   TITLE BAR 
+   CLOSE BAR 
    
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
 
 
+
+$hover-opacity: 0.75;
 
 .close-bar {
 	background-color: $dark-gray;
@@ -38,7 +40,7 @@
 }
 
 .close-bar .left a:hover {
-	opacity: 0.75;
+	opacity: $hover-opacity;
 }
 
 .close-bar .right {
@@ -52,5 +54,57 @@
 	border-bottom: 1px solid $warm-gray-3;
 }
 
+.close-bar .right a {
+	color: #fff;
+}
 
+.close-bar .right a:hover {
+	opacity: $hover-opacity;
+}
+
+.close-bar .right a.prev {
+	padding: 0 1rem;
+	background-image: url('../img/arrow-left-wht.svg');
+	background-repeat: no-repeat;
+	background-size: 1rem 1rem;
+	background-position: 0 50%;
+
+	@include breakpoint(medium) {
+		padding: 0 1rem 0 1.5rem;
+	}
+
+}
+
+.close-bar .right a.prev:before {
+	display: none;
+	content: 'Previous';
+
+	@include breakpoint(medium) {
+		display: inline-block;
+	}
+
+}
+
+.close-bar .right a.next {
+	padding: 0 1rem;
+	background-image: url('../img/arrow-right-wht.svg');
+	background-repeat: no-repeat;
+	background-size: 1rem 1rem;
+	background-position: 100% 50%;
+
+	@include breakpoint(medium) {
+		padding: 0 1.25rem 0 1.5rem;
+	}
+
+}
+
+.close-bar .right a.next:before {
+	display: none;
+	content: 'Next';
+	
+	@include breakpoint(medium) {
+		display: inline-block;
+	}
+
+}
 
