--- a/_scss/custom/_nav.scss
+++ b/_scss/custom/_nav.scss
@@ -36,6 +36,10 @@
 	}	    
 }
 
+#brand:hover {
+	opacity: 0.8;
+}
+
 #brand.scrolled {
 	top: -4rem;
 }
@@ -73,8 +77,13 @@
     font-family: "adobe-caslon-pro",serif;
 	list-style-type: none;
 	text-align: center;
-	padding: 0.75vh;
-	font-size: 6vh;
+	padding: 0.5vh;
+	font-size: 5.5vh;
+	
+	@include breakpoint(medium) {
+		padding: 0.75vh;
+		font-size: 6vh;
+	}
 }
 
 .mobilenav li a {
@@ -89,7 +98,11 @@
 }
 
 .mobilenav li:first-child {
-  	margin-top: 8vh;
+  	margin-top: 12vh;
+  	
+	@include breakpoint(medium) {
+  		margin-top: 8vh;
+	}
 }
 
 .mobilenav li:last-child {
