Adjust vh, style filters, col srcing, type styles

--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -60,6 +60,7 @@
 		'custom/close-bar',
 		'custom/pages',
 		'custom/blocks',
+		'custom/filters',
 		'custom/images',
 		'custom/modal',
 		'custom/video',
