integrate JS filtering inv-test file

--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -61,6 +61,7 @@
 		'custom/pages',
 		'custom/blocks',
 		'custom/filters',
+		'custom/show-hide-grid',
 		'custom/images',
 		'custom/modal',
 		'custom/video',
