--- a/_scss/custom/_filters.scss
+++ b/_scss/custom/_filters.scss
@@ -57,3 +57,60 @@
 	color: $dark-gray;
 	text-decoration: underline;
 }
+
+
+
+
+
+
+
+/* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+  
+   I-LIN: PARENT AND CHILD CATEGORY FILTER TAGS 
+   
+|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
+/*
+.parent-categories button.secondary,
+.parent-categories .button.secondary {
+  width: 100%;
+}
+
+.parent-categories button.small,
+.parent-categories .button.small {
+  padding: 0.5rem 0;
+}
+
+.parent-categories button.small:hover,
+.parent-categories .button.small:hover {
+  background-color: #666;
+  color: #fff;
+}
+
+.parent-categories button.small.active,
+.parent-categories .button.small.active {
+  background-color: #444;
+  color: #fff;
+}
+
+.parent-categories .columns {
+  padding-left: 0.3rem;
+  padding-right: 0.3rem;
+}
+
+.child-categories button.small,
+.child-categories .button.small {
+  padding: 0.5rem 1rem;
+  background-color: #bbb;
+}
+
+.child-categories button.small:hover,
+.child-categories .button.small:hover {
+  background-color: #ddd;
+}
+
+.child-categories button.small.active,
+.child-categories .button.small.active {
+  background-color: #444;
+  color: #fff;
+}
+*/
