--- a/_scss/custom/_pages.scss
+++ b/_scss/custom/_pages.scss
@@ -126,6 +126,7 @@
 	position: relative;
 }
 
+/*
 .investments .company {
     float: left;
     width: 100%;
@@ -141,6 +142,7 @@
 	}
 
 }
+*/
 
 .border-override {
     position: absolute;
