--- a/_scss/custom/_pages.scss
+++ b/_scss/custom/_pages.scss
@@ -6,6 +6,16 @@
 
 
 
+
+.desktop-video-wrap h1,
+.mobile-static-wrap h1 {
+	font-style: italic;
+	color: #fff;
+}
+
+
+
+
 // home page ideals
 
 .region-ideals h1 {
